# DerivativesPricingEngine

./: .dockerignore  .gitignore  CMakeLists.txt  ReadME.md  TODO.md  build.sh  design.md  docker-compose.yml  main.cpp
backend/: .gitignore  CMakeLists.txt  build.sh  conanfile.txt  main.cpp  server_main.cpp
backend/data/equity/: stock_price.csv
backend/data/interest_rate_curves/: flat_curve.csv
backend/include/core/: MarketData.hpp  Model.hpp  UnderlyingModel.hpp
backend/include/curves/: FlatCurve.hpp
backend/include/engines/: BinomialTreeEngine.hpp
backend/include/enums/: CompoundingConvention.hpp  ModelNames.hpp
backend/include/instruments/equity/: CallOption.hpp  Option.hpp
backend/include/instruments/interest_rates/: Swap.hpp
backend/include/models/: BlackScholeModel.hpp
backend/include/rest_api/: server.hpp
backend/include/structs/: BasisFunctions.hpp  OptionPriceResult.hpp
backend/include/utils/: CurveInterpolation.hpp  Simulation.hpp  UsualPayoffs.hpp
backend/src/core/: InterestRateCurve.cpp  PricingEngine.cpp
backend/src/engines/: AnalyticalEngine.cpp  BinomialTreeEngine.cpp  MonteCarloEngine.cpp
backend/src/instruments/equity/: CallOption.cpp
backend/src/instruments/interest_rates/: Bond.cpp
backend/src/structs/: BasisFunctions.cpp
backend/src/utils/: AnalyticalFormulas.cpp  CurveInterpolation.cpp  DayCount.cpp  Simulation.cpp  UsualPayoffs.cpp
backend/tests/: test_black_scholes_analytical.cpp  test_black_scholes_binomial_tree.cpp  test_interest_rate_curve.cpp  test_pricing_bond.cpp  test_simulation.cpp
data/interest_rate_curves/: curve_example.csv
docker/: backend.Dockerfile  frontend.Dockerfile
frontend/: api_calls.py  app.py  callbacks.py  requirements.txt  utils.py
frontend/src/: callbacks.py
frontend/src/enums/: enums_products.py
frontend/src/forms/: equity_forms.py  interest_rate_forms.py
frontend/src/utils/: api.py
include/core/: Instrument.hpp  InterestRateCurve.hpp  MarketData.hpp  PricingEngine.hpp  UnderlyingModel.hpp
include/curves/: FlatCurve.hpp
include/engines/: AnalyticalEngine.hpp  BinomialTreeEngine.hpp  MonteCarloEngine.hpp
include/enums/: CompoundingConvention.hpp  DayCountConvention.hpp  ExerciseConvention.hpp  TreeModel.hpp
include/instruments/: Bond.hpp
include/instruments/equity/: CallOption.hpp  Option.hpp
include/models/: BlackScholeModel.hpp
include/structs/: BasisFunctions.hpp
include/utils/: AnalyticalFormulas.hpp  DayCount.hpp  EnumToString.hpp  Simulation.hpp  TimeSchedule.hpp
src/core/: Instrument.cpp  InterestRateCurve.cpp  MarketData.cpp  PricingEngine.cpp  UnderlyingModel.cpp
src/curves/: FlatCurve.cpp
src/engines/: AnalyticalEngine.cpp  BinomialTreeEngine.cpp  MonteCarloEngine.cpp
src/instruments/: Bond.Cpp
src/instruments/equity/: CallOption.cpp  Option.cpp
src/models/: BlackScholeModel.cpp
src/utils/: CurveInterpolation.cpp  DayCount.cpp  EnumToString.cpp  Simulation.cpp  TimeSchedule.cpp
tests/: test_black_scholes.cpp  test_black_scholes_binomial_tree.cpp  test_black_scholes_monte_carlo.cpp  test_day_count_convention.cpp  test_interest_rate_curve.cpp  test_pricing_bond.cpp
